--- a/src/issues/IssueTrackerSolution/IssueTracker.Tests/IssueTracker.Tests.csproj
+++ b/src/issues/IssueTrackerSolution/IssueTracker.Tests/IssueTracker.Tests.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Marten" Version="7.37.3" />
         <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="9.2.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="Shouldly" Version="4.3.0" />
         <PackageReference Include="Testcontainers" Version="4.2.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.2.0" />
